--- a/package.json
+++ b/package.json
@@ -49,6 +49,12 @@
         "icon": "$(arrow-down)"
       },
       {
+        "command": "rgss-script-editor.createScriptLoader",
+        "title": "Create Script Loader",
+        "category": "RGSS Script Editor",
+        "icon": "$(debug-configure)"
+      },
+      {
         "command": "rgss-script-editor.runGame",
         "title": "Run Game",
         "category": "RGSS Script Editor",
